--- a/VCS/AEON/resource/Localization/en.strings
+++ b/VCS/AEON/resource/Localization/en.strings
@@ -625,3 +625,5 @@
 //Loanapply
 "main.customerInformation" = "Customer Information";
 "main.applyLoan" = "Apply Loan";
+ //chatbot
+"message.ask" = "Ask";
