--- a/VCS/AEON/resource/Localization/my_MM.strings
+++ b/VCS/AEON/resource/Localization/my_MM.strings
@@ -605,3 +605,5 @@
 "main.loanApplicationStatusBtn" = "ချေးငွေးလျှောက်လွှာ";
 "main.customerInformation" = "အသုံးပြုသူအချက်အလက်";
 "main.applyLoan" = "ချေးငွေးလျှောက်ထား";
+//chatbot
+"message.ask" = "မေးမယ်";
