--- a/VCS/AEON/resource/Localization/my_MM.strings
+++ b/VCS/AEON/resource/Localization/my_MM.strings
@@ -614,3 +614,5 @@
 "member.cameraglass" = "ဓာတ်ပုံရိုက်နေစဉ်အတွင်း မျက်မှန်မတပ်ရ။";
 "main.multilogin" = "နောက်ထပ် Login ဝင်နေသည်။";
 "securityquestion.password.holder" = "လျှို့ဝှက်ကုဒ်";
+
+"main.version :" = "ဗားရှင်း ";
