--- a/VCS/AEON/resource/Localization/my_MM.strings
+++ b/VCS/AEON/resource/Localization/my_MM.strings
@@ -617,3 +617,4 @@
 "securityquestion.password.holder" = "လျှို့ဝှက်ကုဒ်";
 
 "main.version :" = "ဗားရှင်း ";
+"freechat.Toomanywords" = "စကားလုံးများနေသည်။";
